Archive2/de/dc5fbcee77e1a7/output
main.cpp:11:1: error: expected ';' after struct definition
 }
 ^
main.cpp: In member function 'void Padre::start()':
main.cpp:18:9: error: 'stateMachine' was not declared in this scope
         stateMachine.onStart();
         ^
main.cpp:19:16: error: 'start_' was not declared in this scope
         start_();
                ^
main.cpp: At global scope:
main.cpp:26:8: error: expected initializer before 'Figlio'
 classe Figlio : public Padre
        ^
